--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -163,6 +163,18 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="cas_play_status">
+        <property name="font">
+         <font>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -262,6 +274,9 @@
      <string>&amp;File</string>
     </property>
     <addaction name="actionOpen_CAS_Image_A8CAS"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -269,6 +284,11 @@
   <action name="actionOpen_CAS_Image_A8CAS">
    <property name="text">
     <string>Open CAS Image (A8CAS)</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>&amp;Exit</string>
    </property>
   </action>
  </widget>
