--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>628</width>
-    <height>681</height>
+    <width>511</width>
+    <height>697</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -195,6 +195,16 @@
      </layout>
     </item>
     <item>
+     <widget class="SerialDataVisiblyWidget" name="SerialData" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>30</height>
+       </size>
+      </property>
+     </widget>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
        <widget class="QLabel" name="label">
@@ -303,7 +313,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>628</width>
+     <width>511</width>
      <height>23</height>
     </rect>
    </property>
@@ -330,6 +340,14 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SerialDataVisiblyWidget</class>
+   <extends>QWidget</extends>
+   <header>serial_data_visibly_widget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
